test_case/rust-lang_rust/53748_416404317_49.rs
\n\nIf the item you are importing is not defined in some super-module of the\ncurrent module, then it must also be declared as public (e.g., `pub fn`).\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/no-implicit-prelude-nested.rs","byte_start":1810,"byte_end":1814,"line_start":40,"line_end":40,"column_start":9,"column_end":13,"is_primary":true,"text":[{"text":"        drop(2) //~ ERROR cannot find function `drop` in this scope","highlight_start":9,"highlight_end":13}],"label":"not found in this scope","o;\n\nimpl SomeTrait for Foo {} // error: trait `SomeTrait` is not in scope\n